styling list view

--- a/src/overview-festivals.html
+++ b/src/overview-festivals.html
@@ -421,7 +421,7 @@
 
                     </label>
                     <!--container 3 overviewSection -->
-                    <div class="overviewSection__tilesContainer">
+                    <div class="overviewSection__tilesListContainer">
 
                         <label class="overviewSection__labelContainer overviewSection__labelContainer--tiles">
                             <span class="overviewSection__text overviewSection__text--tiles">Kacheln</span>
@@ -506,8 +506,9 @@
 
 
                             </div>
-                            <p class="overviewSection__info breadcrumbInfosDatesLikes">Eggersriet SG / 13. Aug – 15. Aug
-                                2016</p>
+                            <p class="overviewSection__info breadcrumbInfosDatesLikes">
+                                <span class="overviewSection__location">Eggersriet SG</span><span class="overviewSection__slash">/</span> 13. Aug – 15. Aug 2016
+                                </p>
                             <h2 class="overviewSection__cardTitle">Sur Le Lac</h2>
                             <p class="overviewSection__cardText copy">Das Festival präsentiert Künstler,
                                 welche sich im Spannungsfeld
@@ -558,7 +559,7 @@
                                 </svg>
 
                             </div>
-                            <p class="overviewSection__info breadcrumbInfosDatesLikes">Aarberg BE / 08. Jul – 09. Jul
+                            <p class="overviewSection__info breadcrumbInfosDatesLikes"><span class="overviewSection__location">Aarberg BE </span><span class="overviewSection__slash">/</span> 08. Jul – 09. Jul
                                 2016</p>
                             <h2 class="overviewSection__cardTitle">Stars of Sounds</h2>
                             <p class="overviewSection__cardText copy">Im Juli verwendelt sich der Stadtplatz von
@@ -609,7 +610,7 @@
                                     </g>
                                 </svg>
                             </div>
-                            <p class="overviewSection__info breadcrumbInfosDatesLikes">Nyon VD / 19. Jul – 24. Jul
+                            <p class="overviewSection__info breadcrumbInfosDatesLikes"><span class="overviewSection__location">Nyon VD </span><span class="overviewSection__slash">/</span> 19. Jul – 24. Jul
                                 2016</p>
                             <h2 class="overviewSection__cardTitle">Paléo Festival</h2>
                             <p class="overviewSection__cardText copy">Bienvenue! In Nyon treffen sich jedes Jahr die
@@ -661,7 +662,7 @@
 
 
                             </div>
-                            <p class="overviewSection__info breadcrumbInfosDatesLikes">Rapperswil SG / 29. Jun – 02. Jul
+                            <p class="overviewSection__info breadcrumbInfosDatesLikes"><span class="overviewSection__location">Rapperswil SG </span><span class="overviewSection__slash">/</span>29. Jun – 02. Jul
                                 2016</p>
                             <h2 class="overviewSection__cardTitle">Blues & Jazz Festival</h2>
                             <p class="overviewSection__cardText copy">Alles ist schön beim blues’n’jazz –
@@ -711,7 +712,7 @@
                                     </g>
                                 </svg>
                             </div>
-                            <p class="overviewSection__info breadcrumbInfosDatesLikes">Basel BS / 14. Aug – 15. Aug
+                            <p class="overviewSection__info breadcrumbInfosDatesLikes"><span class="overviewSection__location">Basel BS </span><span class="overviewSection__slash">/</span> 14. Aug – 15. Aug
                                 2016</p>
                             <h2 class="overviewSection__cardTitle">Openair Basel</h2>
                             <p class="overviewSection__cardText copy">Eine Bühne, zwei Tage und sechs Bands,
@@ -761,7 +762,7 @@
                                     </g>
                                 </svg>
                             </div>
-                            <p class="overviewSection__info breadcrumbInfosDatesLikes">St.Gallen SG / 30. Jun – 03. Jul
+                            <p class="overviewSection__info breadcrumbInfosDatesLikes"><span class="overviewSection__location">St.Gallen SG </span><span class="overviewSection__slash">/</span> 30. Jun – 03. Jul
                                 2016</p>
                             <h2 class="overviewSection__cardTitle">Openair St. Gallen</h2>
                             <p class="overviewSection__cardText copy">Das Open Air St. Gallen hat Tradition
@@ -814,7 +815,7 @@
                                 </svg>
 
                             </div>
-                            <p class="overviewSection__info breadcrumbInfosDatesLikes">Brunnadern SG / 16. Jul 2016</p>
+                            <p class="overviewSection__info breadcrumbInfosDatesLikes"><span class="overviewSection__location">Brunnadern SG </span><span class="overviewSection__slash">/</span> 16. Jul 2016</p>
                             <h2 class="overviewSection__cardTitle">Open Ear Festival</h2>
                             <p class="overviewSection__cardText copy">Das wohl kleinste Openair im Toggenburg
                                 kann sich durchaus sehen lassen.
@@ -864,8 +865,8 @@
                                     </g>
                                 </svg>
                             </div>
-                            <p class="overviewSection__info breadcrumbInfosDatesLikes">Bern
-                                BE / 14. Jul – 17. Jul 2016
+                            <p class="overviewSection__info breadcrumbInfosDatesLikes"><span class="overviewSection__location">Bern
+                                BE </span><span class="overviewSection__slash">/</span> 14. Jul – 17. Jul 2016
                             </p>
                             <h2 class="overviewSection__cardTitle">Gurten Festival</h2>
                             <p class="overviewSection__cardText copy">Party auf dem Berner Hausberg mit guter
@@ -916,7 +917,8 @@
                                     </g>
                                 </svg>
                             </div>
-                            <p class="overviewSection__info breadcrumbInfosDatesLikes">Montreux VD / 16. Jul 2016</p>
+                            <p class="overviewSection__info breadcrumbInfosDatesLikes"><span class="overviewSection__location">Montreux VD
+                            </span><span class="overviewSection__slash">/</span> 16. Jul 2016</p>
                             <h2 class="overviewSection__cardTitle">Montreux Jazz</h2>
                             <p class="overviewSection__cardText copy">Ein grosser See, Berge und ganz viel Jazz Musik.
                                 Bereits seit 50 Jahren wird in Montreux Musikgeschichte geschrieben …
