creat a new span for location and date

--- a/src/overview-festivals.html
+++ b/src/overview-festivals.html
@@ -425,7 +425,8 @@
 
                         <label class="overviewSection__labelContainer overviewSection__labelContainer--tiles">
                             <span class="overviewSection__text overviewSection__text--tiles">Kacheln</span>
-                            <svg class="overviewSection__icon overviewSection__icon--tiles " width="17px" height="17px" viewBox="0 0 17 17"
+                            <svg class="overviewSection__icon overviewSection__icon--tiles " width="17px" height="17px"
+                                 viewBox="0 0 17 17"
                                  version="1.1" xmlns="http://www.w3.org/2000/svg"
                                  xmlns:xlink="http://www.w3.org/1999/xlink">
                                 <!-- Generator: Sketch 39.1 (31720) - http://www.bohemiancoding.com/sketch -->
@@ -449,7 +450,8 @@
 
                         <label class="overviewSection__labelContainer overviewSection__labelContainer--list">
                             <span class="overviewSection__text overviewSection__text--list">Liste</span>
-                            <svg class="overviewSection__icon overviewSection__icon-list" width="24px" height="17px" viewBox="0 0 24 17"
+                            <svg class="overviewSection__icon overviewSection__icon-list" width="24px" height="17px"
+                                 viewBox="0 0 24 17"
                                  version="1.1" xmlns="http://www.w3.org/2000/svg"
                                  xmlns:xlink="http://www.w3.org/1999/xlink">
                                 <!-- Generator: Sketch 39.1 (31720) - http://www.bohemiancoding.com/sketch -->
@@ -507,8 +509,10 @@
 
                             </div>
                             <p class="overviewSection__info breadcrumbInfosDatesLikes">
-                                <span class="overviewSection__location">Eggersriet SG</span><span class="overviewSection__slash">/</span> 13. Aug – 15. Aug 2016
-                                </p>
+                                <span class="overviewSection__location">Eggersriet SG</span>
+                                <span class="overviewSection__slash">/</span>
+                                <span class="overviewSection__date"> 13. Aug – 15. Aug 2016</span>
+                            </p>
                             <h2 class="overviewSection__cardTitle">Sur Le Lac</h2>
                             <p class="overviewSection__cardText copy">Das Festival präsentiert Künstler,
                                 welche sich im Spannungsfeld
@@ -559,8 +563,11 @@
                                 </svg>
 
                             </div>
-                            <p class="overviewSection__info breadcrumbInfosDatesLikes"><span class="overviewSection__location">Aarberg BE </span><span class="overviewSection__slash">/</span> 08. Jul – 09. Jul
-                                2016</p>
+                            <p class="overviewSection__info breadcrumbInfosDatesLikes">
+                                <span class="overviewSection__location">Aarberg BE
+                                </span><span class="overviewSection__slash">/</span>
+                                <span class="overviewSection__date">08. Jul – 09. Jul 2016</span>
+                            </p>
                             <h2 class="overviewSection__cardTitle">Stars of Sounds</h2>
                             <p class="overviewSection__cardText copy">Im Juli verwendelt sich der Stadtplatz von
                                 Aarberg wieder in die einzigartige Kulisse des Stars of Sounds. Erlebe magische …</p>
@@ -610,8 +617,11 @@
                                     </g>
                                 </svg>
                             </div>
-                            <p class="overviewSection__info breadcrumbInfosDatesLikes"><span class="overviewSection__location">Nyon VD </span><span class="overviewSection__slash">/</span> 19. Jul – 24. Jul
-                                2016</p>
+                            <p class="overviewSection__info breadcrumbInfosDatesLikes">
+                                <span class="overviewSection__location">Nyon VD </span>
+                                <span class="overviewSection__slash">/</span>
+                                <span class="overviewSection__date">19. Jul – 24. Jul 2016</span>
+                            </p>
                             <h2 class="overviewSection__cardTitle">Paléo Festival</h2>
                             <p class="overviewSection__cardText copy">Bienvenue! In Nyon treffen sich jedes Jahr die
                                 ganze Grossen aus der Electronic Szene. Die Tickets sind sehr begehrt und schnell …</p>
@@ -662,8 +672,11 @@
 
 
                             </div>
-                            <p class="overviewSection__info breadcrumbInfosDatesLikes"><span class="overviewSection__location">Rapperswil SG </span><span class="overviewSection__slash">/</span>29. Jun – 02. Jul
-                                2016</p>
+                            <p class="overviewSection__info breadcrumbInfosDatesLikes">
+                                <span class="overviewSection__location">Rapperswil SG </span>
+                                <span class="overviewSection__slash">/</span>
+                                <span class="overviewSection__date">29. Jun – 02. Jul 2016</span>
+                            </p>
                             <h2 class="overviewSection__cardTitle">Blues & Jazz Festival</h2>
                             <p class="overviewSection__cardText copy">Alles ist schön beim blues’n’jazz –
                                 sogar der Regen. Es werden neun Konzerte am Rapperswiler Hafen auf drei Bühnen …</p>
@@ -712,7 +725,9 @@
                                     </g>
                                 </svg>
                             </div>
-                            <p class="overviewSection__info breadcrumbInfosDatesLikes"><span class="overviewSection__location">Basel BS </span><span class="overviewSection__slash">/</span> 14. Aug – 15. Aug
+                            <p class="overviewSection__info breadcrumbInfosDatesLikes"><span
+                                    class="overviewSection__location">Basel BS </span><span
+                                    class="overviewSection__slash">/</span> 14. Aug – 15. Aug
                                 2016</p>
                             <h2 class="overviewSection__cardTitle">Openair Basel</h2>
                             <p class="overviewSection__cardText copy">Eine Bühne, zwei Tage und sechs Bands,
@@ -762,8 +777,11 @@
                                     </g>
                                 </svg>
                             </div>
-                            <p class="overviewSection__info breadcrumbInfosDatesLikes"><span class="overviewSection__location">St.Gallen SG </span><span class="overviewSection__slash">/</span> 30. Jun – 03. Jul
-                                2016</p>
+                            <p class="overviewSection__info breadcrumbInfosDatesLikes">
+                                <span class="overviewSection__location">St.Gallen SG </span>
+                                <span class="overviewSection__slash">/</span>
+                                <span class="overviewSection__date"> 30. Jun – 03. Jul2016</span>
+                            </p>
                             <h2 class="overviewSection__cardTitle">Openair St. Gallen</h2>
                             <p class="overviewSection__cardText copy">Das Open Air St. Gallen hat Tradition
                                 denn es geht dieses Jahr bereits die 40. Edition über die Bühne.
@@ -815,7 +833,11 @@
                                 </svg>
 
                             </div>
-                            <p class="overviewSection__info breadcrumbInfosDatesLikes"><span class="overviewSection__location">Brunnadern SG </span><span class="overviewSection__slash">/</span> 16. Jul 2016</p>
+                            <p class="overviewSection__info breadcrumbInfosDatesLikes">
+                                <span class="overviewSection__location">Brunnadern SG </span>
+                                <span class="overviewSection__slash">/</span>
+                                <span class="overviewSection__date"> 16. Jul 2016</span>
+                            </p>
                             <h2 class="overviewSection__cardTitle">Open Ear Festival</h2>
                             <p class="overviewSection__cardText copy">Das wohl kleinste Openair im Toggenburg
                                 kann sich durchaus sehen lassen.
@@ -865,8 +887,10 @@
                                     </g>
                                 </svg>
                             </div>
-                            <p class="overviewSection__info breadcrumbInfosDatesLikes"><span class="overviewSection__location">Bern
-                                BE </span><span class="overviewSection__slash">/</span> 14. Jul – 17. Jul 2016
+                            <p class="overviewSection__info breadcrumbInfosDatesLikes">
+                                <span class="overviewSection__location">Bern BE </span>
+                                <span class="overviewSection__slash">/</span>
+                                <span class="overviewSection__date"> 14. Jul – 17. Jul 2016</span>
                             </p>
                             <h2 class="overviewSection__cardTitle">Gurten Festival</h2>
                             <p class="overviewSection__cardText copy">Party auf dem Berner Hausberg mit guter
@@ -917,8 +941,11 @@
                                     </g>
                                 </svg>
                             </div>
-                            <p class="overviewSection__info breadcrumbInfosDatesLikes"><span class="overviewSection__location">Montreux VD
-                            </span><span class="overviewSection__slash">/</span> 16. Jul 2016</p>
+                            <p class="overviewSection__info breadcrumbInfosDatesLikes">
+                                <span class="overviewSection__location">Montreux VD</span>
+                                <span class="overviewSection__slash">/</span>
+                                <span class="overviewSection__date">16. Jul 2016</span>
+                            </p>
                             <h2 class="overviewSection__cardTitle">Montreux Jazz</h2>
                             <p class="overviewSection__cardText copy">Ein grosser See, Berge und ganz viel Jazz Musik.
                                 Bereits seit 50 Jahren wird in Montreux Musikgeschichte geschrieben …
