--- a/src/overview-festivals.html
+++ b/src/overview-festivals.html
@@ -725,10 +725,12 @@
                                     </g>
                                 </svg>
                             </div>
-                            <p class="overviewSection__info breadcrumbInfosDatesLikes"><span
-                                    class="overviewSection__location">Basel BS </span><span
-                                    class="overviewSection__slash">/</span> 14. Aug – 15. Aug
-                                2016</p>
+                            <p class="overviewSection__info breadcrumbInfosDatesLikes">
+                                <span class="overviewSection__location">Basel BS </span>
+                                <span class="overviewSection__slash">/</span>
+                                <span class="overviewSection__date">14. Aug – 15. Aug 2016</span>
+
+                            </p>
                             <h2 class="overviewSection__cardTitle">Openair Basel</h2>
                             <p class="overviewSection__cardText copy">Eine Bühne, zwei Tage und sechs Bands,
                                 kulinarische Köstlichkeiten und eine
