--- a/src/overview-festivals.html
+++ b/src/overview-festivals.html
@@ -18,6 +18,48 @@
     <div class="container">
         <!-- start with headerSection -->
         <header class="headerSection" id="headerSection">
+            <div class="headerSection__breadCrumbContainer">
+                <svg class="headerSection__home" width="24px" height="23px" viewBox="0 0 24 23" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                    <!-- Generator: Sketch 39.1 (31720) - http://www.bohemiancoding.com/sketch -->
+                    <title>navigation_home</title>
+                    <desc>Created with Sketch.</desc>
+                    <defs></defs>
+                    <g id="Icons" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+                        <g class="headerSection__homeIcon" id="navigation_home" transform="translate(-12.000000, -13.000000)" fill="#000000">
+                            <g transform="translate(12.000000, 13.000000)" id="home-icon">
+                                <path d="M20.0437877,11.0569559 C19.6540212,11.0569559 19.3520591,11.357467 19.3520591,11.7491159 L19.3520591,21.2042959 L14.4471742,21.2042959 L14.4471742,17.3433765 C14.4471742,16.9811787 14.1453296,16.6645499 13.780426,16.6645499 L10.2339394,16.6645499 C9.84382001,16.6645499 9.52962251,16.9811395 9.52962251,17.3433765 L9.52962251,21.2042959 L4.63705137,21.2042959 L4.63705137,12.0630781 C4.63705137,11.6981352 4.33548138,11.3949966 3.94536197,11.3949966 C3.58073287,11.3949966 3.27888836,11.6981352 3.27888836,12.0630781 L3.27888836,21.8965343 C3.27888836,22.2614379 3.58073287,22.5646157 3.94536197,22.5646157 L10.2339394,22.5646157 C10.5985685,22.5646157 10.900413,22.2614379 10.900413,21.8965343 L10.900413,18.0355757 L13.0886974,18.0355757 L13.0886974,21.8965343 C13.0886974,22.2614379 13.3905811,22.5646157 13.780426,22.5646157 L20.0437877,22.5646157 C20.408456,22.5646157 20.7103005,22.2614379 20.7103005,21.8965343 L20.7103005,11.7491943 C20.7103005,11.3575063 20.408456,11.0569559 20.0437877,11.0569559 Z M23.8041419,11.5962485 L18.3459212,6.11473353 L18.3459212,2.37722643 C18.3459212,1.98816585 18.0314492,1.6876939 17.6416435,1.6876939 C17.2767007,1.6876939 16.9748954,1.98820507 16.9748954,2.37722643 L16.9748954,4.74370772 L12.4724437,0.214667637 C12.3344822,0.0751375946 12.1705992,0 12.0071866,0 C11.8185976,0 11.6549498,0.0778042733 11.5167138,0.214667637 L0.210231353,11.5211109 C-0.0610247753,11.7920925 -0.0789856408,12.2267612 0.210231353,12.4762917 C0.46168347,12.7660577 0.894744252,12.7473125 1.16596116,12.4762917 L12.0071866,1.66083104 L22.8231963,12.5782529 C22.9358635,12.6909593 23.0998643,12.7553518 23.3137084,12.7553518 C23.5022974,12.7553518 23.6656707,12.6909593 23.8041419,12.5782529 C24.0558294,12.3260165 24.0745745,11.869936 23.8041419,11.5962485 Z"></path>
+                            </g>
+                        </g>
+                    </g>
+                </svg>
+                <svg class="headerSection__rightArrow" width="13px" height="24px" viewBox="0 0 13 24" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                    <!-- Generator: Sketch 39.1 (31720) - http://www.bohemiancoding.com/sketch -->
+                    <title>steuerung_pfeil_rechts</title>
+                    <desc>Created with Sketch.</desc>
+                    <defs></defs>
+                    <g id="Icons" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+                        <g class="headerSection__rightIcon" id="steuerung_pfeil_rechts" transform="translate(-19.000000, -12.000000)" fill="#000000">
+                            <g transform="translate(19.000000, 12.000000)" id="Shape">
+                                <path d="M12.5380457,11.5215592 L1.21641314,0.199926652 C0.949844267,-0.0666422172 0.522328156,-0.0666422172 0.255759288,0.199926652 C-0.0108095812,0.466495521 -0.0108095812,0.894011631 0.255759288,1.1605805 L11.0945501,11.9993713 L0.255759288,22.8381621 C-0.0108095812,23.104731 -0.0108095812,23.5322471 0.255759288,23.7988159 C0.386528921,23.9295856 0.562564967,24 0.733571411,24 C0.904577855,24 1.0806139,23.9346152 1.21138353,23.7988159 L12.5330161,12.4771834 C12.7995849,12.2156442 12.7995849,11.7830984 12.5380457,11.5215592 L12.5380457,11.5215592 Z"></path>
+                            </g>
+                        </g>
+                    </g>
+                </svg>
+                <div class="headerSection__festivals breadcrumbInfosDatesLikes">Festivals</div>
+                <svg class="headerSection__dropdown" width="17px" height="10px" viewBox="0 0 17 10" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                    <!-- Generator: Sketch 39.1 (31720) - http://www.bohemiancoding.com/sketch -->
+                    <title>steuerung_dropdown</title>
+                    <desc>Created with Sketch.</desc>
+                    <defs></defs>
+                    <g id="Icons" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+                        <g class="headerSection__dropdownIcon" id="steuerung_dropdown" transform="translate(-16.000000, -19.000000)" fill="#010002">
+                            <g transform="translate(24.363636, 24.000000) rotate(-90.000000) translate(-24.363636, -24.000000) translate(20.000000, 16.000000)" id="Shape">
+                                <polygon points="8.2329697 15.9516768 0.0206060606 7.97559596 8.2329697 0 8.65842424 0.437818182 0.89769697 7.97559596 8.65842424 15.5135354"></polygon>
+                            </g>
+                        </g>
+                    </g>
+                </svg>
+            </div>
             <div class="headerSection__Icon headerSection__Icon--navLike">
                 <div class="headerSection__hamburgerBox">
                     <div class="headerSection__hamburger" id="hamburger">
