fix the links in the footerSection

--- a/src/overview-festivals.html
+++ b/src/overview-festivals.html
@@ -1048,9 +1048,9 @@
         <!-- start with footerSection -->
         <footer class="footerSection">
             <ul class="footerSection__box1">
-                <li>FESTIVAL</li>
-                <li>MAGAZIN</li>
-                <li>NEWS</li>
+                <li class="footerSection__item"><a href="overview-festivals.html">FESTIVALS</a></li>
+                <li class="footerSection__item"><a href="#magazinSection">MAGAZIN</a></li>
+                <li class="footerSection__item"><a href="#newsSection">NEWS</a></li>
             </ul>
             <ul class="footerSection__box2">
                 <li>
