correct font for footer text

--- a/src/index.html
+++ b/src/index.html
@@ -592,9 +592,9 @@
         <!-- start with footerSection -->
         <footer class="footerSection">
             <ul class="footerSection__box1">
-                <li class="footerSection__item"><a href="overview-festivals.html">FESTIVALS</a></li>
-                <li class="footerSection__item"><a href="#magazinSection">MAGAZIN</a></li>
-                <li class="footerSection__item"><a href="#newsSection">NEWS</a></li>
+                <li class="footerSection__item footerLabels"><a href="overview-festivals.html">FESTIVALS</a></li>
+                <li class="footerSection__item footerLabels"><a href="#magazinSection">MAGAZIN</a></li>
+                <li class="footerSection__item footerLabels"><a href="#newsSection">NEWS</a></li>
             </ul>
             <ul class="footerSection__box2">
                 <li>
@@ -686,7 +686,7 @@
 
             <div class="footerSection__box3">
                 <a href="#headerSection" class="footerSection__link footerSection__link--position">
-                    <span class="footerSection__linkText">BACK TO TOP</span>
+                    <span class="footerSection__linkText footerLabels">BACK TO TOP</span>
                     <svg class="footerSection__arrowPic" height="24px" version="1.1" viewBox="0 0 24 24" width="24px"
                          xmlns="http://www.w3.org/2000/svg"
                          xmlns:xlink="http://www.w3.org/1999/xlink">
