anchors for footerSection

--- a/src/index.html
+++ b/src/index.html
@@ -128,12 +128,11 @@
             <nav class="navSection" id="navSection">
 
 
-                <div class="navSection__titles">
+                <div class="navSection__titleContainer">
 
-                    <a href="overview-festivals.html"
-                       class=" titles navSection__title navSection__title--1">Festivals</a>
-                    <a href="#magazinSection" class=" titles navSection__title navSection__title--2">Magazin</a>
-                    <a href="#newsSection" class=" titles navSection__title navSection__title--3">News</a>
+                    <a href="overview-festivals.html"class="titles navSection__title navSection__title--1">Festivals</a>
+                    <a href="#magazinSection" class="titles navSection__title navSection__title--2">Magazin</a>
+                    <a href="#newsSection" class="titles navSection__title navSection__title--3">News</a>
 
                 </div>
                 <div class="navSection__BoxB">
@@ -592,9 +591,9 @@
         <!-- start with footerSection -->
         <footer class="footerSection">
             <ul class="footerSection__box1">
-                <li class="footerSection__item footerLabels"><a href="overview-festivals.html">FESTIVALS</a></li>
-                <li class="footerSection__item footerLabels"><a href="#magazinSection">MAGAZIN</a></li>
-                <li class="footerSection__item footerLabels"><a href="#newsSection">NEWS</a></li>
+                <li><a class="footerSection__item footerLabels" href="overview-festivals.html">FESTIVALS</a></li>
+                <li><a class="footerSection__item footerLabels" href="#magazinSection">MAGAZIN</a></li>
+                <li><a class="footerSection__item footerLabels" href="#newsSection">NEWS</a></li>
             </ul>
             <ul class="footerSection__box2">
                 <li>
