--- a/src/overview-festivals.html
+++ b/src/overview-festivals.html
@@ -187,8 +187,8 @@
                 <div class="navSection__titleContainer">
 
                     <a href="overview-festivals.html"class="titles navSection__title navSection__title--1">Festivals</a>
-                    <a href="#magazinSection" class="titles navSection__title navSection__title--2">Magazin</a>
-                    <a href="#newsSection" class="titles navSection__title navSection__title--3">News</a>
+                    <a href="index.html#magazinSection" class="titles navSection__title navSection__title--2">Magazin</a>
+                    <a href="index.html#newsSection" class="titles navSection__title navSection__title--3">News</a>
 
                 </div>
                 <div class="navSection__BoxB">
