--- a/src/overview-festivals.html
+++ b/src/overview-festivals.html
@@ -186,8 +186,10 @@
 
                 <div class="navSection__titleContainer">
 
-                    <a href="overview-festivals.html"class="titles navSection__title navSection__title--1">Festivals</a>
-                    <a href="index.html#magazinSection" class="titles navSection__title navSection__title--2">Magazin</a>
+                    <a href="overview-festivals.html"
+                       class="titles navSection__title navSection__title--1">Festivals</a>
+                    <a href="index.html#magazinSection"
+                       class="titles navSection__title navSection__title--2">Magazin</a>
                     <a href="index.html#newsSection" class="titles navSection__title navSection__title--3">News</a>
 
                 </div>
