css grid for panel section

--- a/src/detailsite.html
+++ b/src/detailsite.html
@@ -269,14 +269,23 @@
                     <p class="titleSectionDet__title FestivalFont">Sur Le Lac <br>ein kleines <br>Fest der Musik</p>
                 </div>
                 <div class="titleSectionDet__panelContainer">
-                    <div class="titleSectionDet__panelItems"></div>
-                    <div class="titleSectionDet__panelItems"></div>
-                    <div class="titleSectionDet__panelItems"></div>
-                    <div class="titleSectionDet__panelItems"></div>
-                    <div class="titleSectionDet__panelItems"></div>
-                    <div class="titleSectionDet__panelItems"></div>
-                    <div class="titleSectionDet__panelItems"></div>
-                    <div class="titleSectionDet__panelItems"></div>
+                    <div class="titleSectionDet__panelBox">
+                        <h2 class="titleSectionDet__panelItems titleSectionDet__panelItems--countdown">COUNTDOWN</h2>
+                        <div class="titles titleSectionDet__panelItems titleSectionDet__panelItems--days">7 TAGE</div>
+                    </div>
+                    <div class="titleSectionDet__panelBox">
+                        <h2 class="titleSectionDet__panelItems titleSectionDet__panelItems--rest">ÜBRIGE TICKETS</h2>
+                        <div class="titles titleSectionDet__panelItems titleSectionDet__panelItems--restNumber">43</div>
+                    </div>
+                    <div class="titleSectionDet__panelBox">
+                        <h2 class="titleSectionDet__panelItems titleSectionDet__panelItems--visitors">VISITORS</h2>
+                        <div class="titles titleSectionDet__panelItems titleSectionDet__panelItems--visitorNumber">12'000</div>
+                    </div>
+                    <div class="titleSectionDet__panelBox">
+                        <h2 class="titleSectionDet__panelItems titleSectionDet__panelItems--weather">WEATHER</h2>
+                        <div class="titles titleSectionDet__panelItems titleSectionDet__panelItems--weatherDegree">28°</div>
+                    </div>
+
                 </div>
 
 
