style for h1 linUpSection

--- a/src/detailsite.html
+++ b/src/detailsite.html
@@ -290,6 +290,8 @@
 
 
             </div>
+
+            <!-- start with textSection -->
             <div class="textSection">
 
                 <div class="textSection__breadCrumbContainer">
@@ -503,7 +505,26 @@
                 </div>
 
 
+            <!-- end of textSection -->
+            </div>
 
+            <!-- start with lineUpSection -->
+            <div class="lineUpSection">
+
+
+
+                <div class="lineUpSection__content">
+                    <h1 class="lineUpSection__title">Line Up</h1>
+
+
+                    <p class="lineUpSection__lead lead">
+                        Wir freuen uns auch diese Jahr wieder ein spannendes und einzigartiges Line Up
+                        präsentieren zu dürfen. Auf der Hauptbühne wird definitiv viel los sein.
+                    </p>
+                 </div>
+
+
+                <!-- end of lineUpSection -->
             </div>
             <!-- end of mainSection -->
         </main>
