placed the tabs for linUpSection

--- a/src/detailsite.html
+++ b/src/detailsite.html
@@ -521,7 +521,15 @@
                         Wir freuen uns auch diese Jahr wieder ein spannendes und einzigartiges Line Up
                         präsentieren zu dürfen. Auf der Hauptbühne wird definitiv viel los sein.
                     </p>
+
+                    <div class="lineUpSection__btnContainer">
+                        <button class="lineUpSection__btn lineUpSection__btn--1 tabBtn btnTabsHeader">FREITAG</button>
+                        <button class="lineUpSection__btn lineUpSection__btn--2 tabBtn btnTabsHeader">SAMSTAG</button>
+                        <button class="lineUpSection__btn lineUpSection__btn--3 tabBtn btnTabsHeader">SONNTAG</button>
+                    </div>
                  </div>
+
+
 
 
                 <!-- end of lineUpSection -->
