time schedule desktop finished

--- a/src/detailsite.html
+++ b/src/detailsite.html
@@ -543,45 +543,44 @@
                         <button class="lineUpSection__btn lineUpSection__btn--3 tabBtn btnTabsHeader">SONNTAG</button>
                     </div>
 
-                    <div class="lineUpSection__scheduleContainer">
-                            <div class="lineUpSection__timeBox lineUpSection__timeBox--1">
-                                <div class="lineUpSection__time">17.00</div>
-                                <div class="lineUpSection__groupBox">Kero Kero Bonito</div>
-                                <div class="lineUpSection__groupBox">Girls Names</div>
-                            </div>
-                            <div class="lineUpSection__timeBox lineUpSection__timeBox--2">
-                                <div class="lineUpSection__time">18.00</div>
-                                <div class="lineUpSection__groupBox">Red Hot Chili Peppers</div>
-                                <div class="lineUpSection__groupBox">Wu-Tang Clan</div>
-                            </div>
-                            <div class="lineUpSection__timeBox lineUpSection__timeBox--3">
-                                <div class="lineUpSection__time">19.00</div>
-                                <div class="lineUpSection__groupBox">Tompaul</div>
-                                <div class="lineUpSection__groupBox">3 Doors Down</div>
-                            </div>
-                            <div class="lineUpSection__timeBox lineUpSection__timeBox--4">
-                                <div class="lineUpSection__time">20.00</div>
-                                <div class="lineUpSection__groupBox">Lauryn Hill</div>
-                                <div class="lineUpSection__groupBox">Muse</div>
-                            </div>
-                            <div class="lineUpSection__timeBox lineUpSection__timeBox--5">
-                                <div class="lineUpSection__time">21.00</div>
-                                <div class="lineUpSection__groupBox">The Horrors</div>
-                            </div>
-                            <div class="lineUpSection__timeBox lineUpSection__timeBox--6">
-                                <div class="lineUpSection__time">22.00</div>
-                                <div class="lineUpSection__groupBox">Darkstar</div>
-                            </div>
-                            <div class="lineUpSection__timeBox lineUpSection__timeBox--7">
-                                <div class="lineUpSection__time">23.00</div>
-                                <div class="lineUpSection__groupBox">A=f/m</div>
-                            </div>
 
 
+
+                </div>
+                <div class="lineUpSection__scheduleContainer">
+                    <div class="lineUpSection__timeBox lineUpSection__timeBox--1">
+                        <div class="lineUpSection__time btnTabsHeader">17.00</div>
+                        <div class="lineUpSection__groupBox lead">Kero Kero Bonito</div>
+                        <div class="lineUpSection__groupBox lead">Girls Names</div>
                     </div>
-
-
-
+                    <div class="lineUpSection__timeBox lineUpSection__timeBox--2">
+                        <div class="lineUpSection__time btnTabsHeader">18.00</div>
+                        <div class="lineUpSection__groupBox lead">Red Hot Chili Peppers</div>
+                        <div class="lineUpSection__groupBox lead">Wu-Tang Clan</div>
+                    </div>
+                    <div class="lineUpSection__timeBox lineUpSection__timeBox--3">
+                        <div class="lineUpSection__time btnTabsHeader">19.00</div>
+                        <div class="lineUpSection__groupBox lead">Tompaul</div>
+                        <div class="lineUpSection__groupBox lead">3 Doors Down</div>
+                    </div>
+                    <div class="lineUpSection__timeBox lineUpSection__timeBox--4">
+                        <div class="lineUpSection__time btnTabsHeader">20.00</div>
+                        <div class="lineUpSection__groupBox lead">Lauryn Hill</div>
+                        <div class="lineUpSection__groupBox lead">Muse</div>
+                    </div>
+                    <div class="lineUpSection__timeBox lineUpSection__timeBox--5">
+                        <div class="lineUpSection__time btnTabsHeader">21.00</div>
+                        <div class="lineUpSection__groupBox lead">The Horrors</div>
+                    </div>
+                    <div class="lineUpSection__timeBox lineUpSection__timeBox--6">
+                        <div class="lineUpSection__time btnTabsHeader">22.00</div>
+                        <div class="lineUpSection__groupBox lead">Darkstar</div>
+                    </div>
+                    <div class="lineUpSection__timeBox lineUpSection__timeBox--7">
+                        <div class="lineUpSection__time btnTabsHeader">23.00</div>
+                        <div class="lineUpSection__groupBox lead">A=f/m</div>
+                    </div>
+                </div>
                 <!-- end of lineUpSection -->
             </div>
             <!-- end of mainSection -->
