time schedule responsive finished

--- a/src/detailsite.html
+++ b/src/detailsite.html
@@ -550,35 +550,35 @@
                 <div class="lineUpSection__scheduleContainer">
                     <div class="lineUpSection__timeBox lineUpSection__timeBox--1">
                         <div class="lineUpSection__time btnTabsHeader">17.00</div>
-                        <div class="lineUpSection__groupBox lead">Kero Kero Bonito</div>
-                        <div class="lineUpSection__groupBox lead">Girls Names</div>
+                        <div class="lineUpSection__groupBox lineUpSection__groupBox--1 lead">Kero Kero Bonito</div>
+                        <div class="lineUpSection__groupBox lineUpSection__groupBox--2 lead">Girls Names</div>
                     </div>
                     <div class="lineUpSection__timeBox lineUpSection__timeBox--2">
                         <div class="lineUpSection__time btnTabsHeader">18.00</div>
-                        <div class="lineUpSection__groupBox lead">Red Hot Chili Peppers</div>
-                        <div class="lineUpSection__groupBox lead">Wu-Tang Clan</div>
+                        <div class="lineUpSection__groupBox lineUpSection__groupBox--1  lead">Red Hot Chili Peppers</div>
+                        <div class="lineUpSection__groupBox lineUpSection__groupBox--2 lead">Wu-Tang Clan</div>
                     </div>
                     <div class="lineUpSection__timeBox lineUpSection__timeBox--3">
                         <div class="lineUpSection__time btnTabsHeader">19.00</div>
-                        <div class="lineUpSection__groupBox lead">Tompaul</div>
-                        <div class="lineUpSection__groupBox lead">3 Doors Down</div>
+                        <div class="lineUpSection__groupBox lineUpSection__groupBox--1  lead">Tompaul</div>
+                        <div class="lineUpSection__groupBox lineUpSection__groupBox--2 lead">3 Doors Down</div>
                     </div>
                     <div class="lineUpSection__timeBox lineUpSection__timeBox--4">
                         <div class="lineUpSection__time btnTabsHeader">20.00</div>
-                        <div class="lineUpSection__groupBox lead">Lauryn Hill</div>
-                        <div class="lineUpSection__groupBox lead">Muse</div>
+                        <div class="lineUpSection__groupBox lineUpSection__groupBox--1  lead">Lauryn Hill</div>
+                        <div class="lineUpSection__groupBox lineUpSection__groupBox--2 lead">Muse</div>
                     </div>
                     <div class="lineUpSection__timeBox lineUpSection__timeBox--5">
                         <div class="lineUpSection__time btnTabsHeader">21.00</div>
-                        <div class="lineUpSection__groupBox lead">The Horrors</div>
+                        <div class="lineUpSection__groupBox lineUpSection__groupBox--1  lead">The Horrors</div>
                     </div>
                     <div class="lineUpSection__timeBox lineUpSection__timeBox--6">
                         <div class="lineUpSection__time btnTabsHeader">22.00</div>
-                        <div class="lineUpSection__groupBox lead">Darkstar</div>
+                        <div class="lineUpSection__groupBox lineUpSection__groupBox--1  lead">Darkstar</div>
                     </div>
                     <div class="lineUpSection__timeBox lineUpSection__timeBox--7">
                         <div class="lineUpSection__time btnTabsHeader">23.00</div>
-                        <div class="lineUpSection__groupBox lead">A=f/m</div>
+                        <div class="lineUpSection__groupBox lineUpSection__groupBox--1  lead">A=f/m</div>
                     </div>
                 </div>
                 <!-- end of lineUpSection -->
