embeded the video

--- a/src/detailsite.html
+++ b/src/detailsite.html
@@ -544,8 +544,6 @@
                     </div>
 
 
-
-
                 </div>
                 <div class="lineUpSection__scheduleContainer">
                     <div class="lineUpSection__timeBox lineUpSection__timeBox--1">
@@ -555,7 +553,8 @@
                     </div>
                     <div class="lineUpSection__timeBox lineUpSection__timeBox--2">
                         <div class="lineUpSection__time btnTabsHeader">18.00</div>
-                        <div class="lineUpSection__groupBox lineUpSection__groupBox--1  lead">Red Hot Chili Peppers</div>
+                        <div class="lineUpSection__groupBox lineUpSection__groupBox--1  lead">Red Hot Chili Peppers
+                        </div>
                         <div class="lineUpSection__groupBox lineUpSection__groupBox--2 lead">Wu-Tang Clan</div>
                     </div>
                     <div class="lineUpSection__timeBox lineUpSection__timeBox--3">
@@ -582,6 +581,12 @@
                     </div>
                 </div>
                 <!-- end of lineUpSection -->
+            </div>
+
+            <div class="lineUpSection__video">
+                <iframe
+                        src="https://www.youtube.com/embed/4HTG3Pt9VhQ" width="1440" height="392" frameborder="0">
+                </iframe>
             </div>
             <!-- end of mainSection -->
         </main>
